Converted everything to .spacing mixin, or unit(em). Changed .spacing mixin to use px instead of em

--- a/libs/base/global.less
+++ b/libs/base/global.less
@@ -6,7 +6,7 @@
 *, *:before, *:after {-moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box;}
 
 body, input, button, select, textarea {
-    font: 16px/1.5 'open_sans', "Helvetica Neue", Helvetica, Arial, sans-serif;  
+    font: @base-size/1.5 'open_sans', "Helvetica Neue", Helvetica, Arial, sans-serif;  
 }
 
 button, input, optgroup, select, textarea {
