--- a/libs/base/variables.less
+++ b/libs/base/variables.less
@@ -8,6 +8,9 @@
  * GRID
  */
 
+// The base key size
+@base-size:							16px;
+
 // Break points
 @full-page-width: 					100%;
 @max-page-width: 					1366px;
