--- a/libs/modules/extent-switcher.less
+++ b/libs/modules/extent-switcher.less
@@ -8,7 +8,7 @@
 .beta-extent-switcher {
 	float: left;
 	border: @blue-light 1px solid;
-	padding: @box-spacing-vertical @box-spacing-horizontal;
+	.spacing(padding,@box-spacing-vertical,@box-spacing-horizontal);
 	
 	@media screen and (max-width: @screen-xs-max) {
 		width: 100%;
