--- a/libs/modules/main-nav.less
+++ b/libs/modules/main-nav.less
@@ -40,7 +40,7 @@ html[lang="en-SCT"] .main-nav {
     position: relative;
 
     & > a {
-        padding: 13.5px @box-spacing-horizontal/2;
+        padding: 13.5px unit(@box-spacing-horizontal/2,em);
         display: block;
         font-weight: @font-weight-bold;
         color: @white;
