--- a/libs/modules/side-chat.less
+++ b/libs/modules/side-chat.less
@@ -13,11 +13,12 @@
 	    font-size: @font-size-medium;
 	    line-height: @line-height-large;
         margin: 0;
-        padding: @box-spacing-horizontal*.7 0;
+        .spacing(padding,@box-spacing-horizontal*.7,0);
     }
 
     & > .webchat .webchat__button {
-	    margin-bottom: @box-spacing-horizontal;
+        margin-bottom: unit(@box-spacing-horizontal,em);
+        margin-bottom: @box-spacing-horizontal;
     }
 
 }
