--- a/libs/modules/footer-feedback.less
+++ b/libs/modules/footer-feedback.less
@@ -12,7 +12,7 @@
 }
 
  .footer-feedback__content {
-    padding: 0 @box-spacing-horizontal;
+    .spacing(padding,0,@box-spacing-horizontal);
     .limit-width();
 
     @media (max-width: @screen-xs-max ) {
