--- a/libs/modules/paragraph-numbers.less
+++ b/libs/modules/paragraph-numbers.less
@@ -10,6 +10,7 @@
     
     
     & > * {
+        margin-left: unit(@box-spacing-horizontal*3,em);
         margin-left: @box-spacing-horizontal*3;
     }
 
@@ -19,6 +20,7 @@
 
     .paranum {
         position: absolute;
+        margin-left: unit(-@box-spacing-horizontal*3,em);
         margin-left: -@box-spacing-horizontal*3;
     }
 }
