--- a/libs/modules/references.less
+++ b/libs/modules/references.less
@@ -84,6 +84,7 @@ h4 > .ref-heading__toggle {
 }
 
 .ref-added {
+	margin-right: unit(@box-spacing-horizontal*.4,em);
 	margin-right: @box-spacing-horizontal*.4;
 }
 
@@ -107,6 +108,7 @@ h4 > .ref-heading__toggle {
 
 .ref-dialog__list-item {
 	position: relative; 
+	padding-right: unit(@box-spacing-horizontal*2,em); // Space for the delete button
 	padding-right: @box-spacing-horizontal*2; // Space for the delete button
 }
 
