--- a/libs/modules/search-results.less
+++ b/libs/modules/search-results.less
@@ -11,7 +11,7 @@
     padding: 0;
 }
 .search-results__item {
-    margin: @box-spacing-horizontal 0;
+    .spacing(margin,@box-spacing-horizontal,0);
 }
 
 .search-results__heading {
@@ -20,12 +20,12 @@
 }
 
 .search-results__description {
-    margin: @box-spacing-horizontal*.25 0;
+    .spacing(margin,@box-spacing-horizontal*.25,0);
 }
 
 .search-results__section {
     color:#999;
-    margin: @box-spacing-horizontal*.25 0;
+    .spacing(margin,@box-spacing-horizontal*.25,0);
 }
 
 .search__spellcheck {
