--- a/libs/modules/section-notice.less
+++ b/libs/modules/section-notice.less
@@ -9,7 +9,7 @@
     background: @heritage-yellow-lighter;
     &__content {
         .limit-width;
-        padding: @box-spacing-horizontal 0 0 @box-spacing-horizontal;
+        .spacing(padding,@box-spacing-horizontal,0,0,@box-spacing-horizontal);
         overflow: hidden;
         p a {
             border-bottom: none;
@@ -18,6 +18,7 @@
             }
         }
         .badge {
+            margin-right: unit(@box-spacing-horizontal);
             margin-right: @box-spacing-horizontal;
         }
     }
@@ -35,13 +36,14 @@
 
 @media (max-width: @max-page-width-before-the-share-bar-ruins-it-all) and (min-width: @screen-sm-min) {
     .js .section-notice__content {
+        padding-right: unit(@box-spacing-horizontal*3.5,em);
         padding-right: @box-spacing-horizontal*3.5;
     }
 }
 
 @media (max-width: @screen-sm-max ) {
      .section-notice__content {
-        padding: @box-spacing-horizontal @box-spacing-horizontal 0 @box-spacing-horizontal;
+        .spacing(padding,@box-spacing-horizontal,@box-spacing-horizontal,0,@box-spacing-horizontal);
 
         p {
             font-size: @font-size-small;
