--- a/libs/modules/side-links.less
+++ b/libs/modules/side-links.less
@@ -15,6 +15,7 @@
         padding-left: 0;
 
         & li a {
+            background: url("/static/layout/blue-arrow.gif") no-repeat left unit(@box-spacing-horizontal*.5,em);
             background: url("/static/layout/blue-arrow.gif") no-repeat left @box-spacing-horizontal*.5;
             display: inline-block;
             padding-left: 18px;
