--- a/libs/modules/sidebar-navigation.less
+++ b/libs/modules/sidebar-navigation.less
@@ -9,6 +9,7 @@
     //clear: left;
     width: @width-span-4;
     overflow: hidden; // Stop margin collapsing issues
+    margin-bottom: unit(@box-spacing*1.5,em);
     margin-bottom: @box-spacing*1.5;
     //padding: @box-spacing @box-spacing-vertical;
     margin: 0;
@@ -16,13 +17,14 @@
     @media ( max-width: @screen-xs-max ) {
         float: none;
         width: auto;
+        margin-top: unit(@box-spacing*1.5,em);
         margin-top: @box-spacing*1.5;
     }
 }
 
 .side-nav-beta {
     .main-content__sidebar;
-    margin: 0 0 @box-spacing 0;
+    .spacing(margin,0,0,@box-spacing,0);
     
     ul {
         list-style: none;
@@ -34,7 +36,7 @@
         //border-left: @box-spacing/2 solid @gray-6;
         a {
             margin-bottom: 1px;
-            padding: @box-spacing-vertical*.75 @box-spacing-horizontal*.75;
+            .spacing(padding,@box-spacing-vertical*.75,@box-spacing-horizontal*.75);
             display: block;
             border-bottom: none;
         }
@@ -99,7 +101,7 @@
     li.current {
         font-weight: @font-weight-bold;
         background-color: @blue-lighter;
-        padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
+        .spacing(padding,@box-spacing*.4,@box-spacing*.6,@box-spacing*.6,@box-spacing*.6);
         margin: 0;
         border-bottom: 0.1em solid @blue-light;
     }
@@ -113,11 +115,11 @@
         
         .side-nav__group-title {
             display: block;
-            padding: @box-spacing*.7 @box-spacing*.6 @box-spacing*.9 @box-spacing*.6;
+            .spacing(padding,@box-spacing*.7,@box-spacing*.6,@box-spacing*.9,@box-spacing*.6);
         }
     }
     li.side-nav__item {
-        padding: @box-spacing*.4 @box-spacing*.6 @box-spacing*.6 @box-spacing*.6;
+        .spacing(padding,@box-spacing*.4,@box-spacing*.6,@box-spacing*.6,@box-spacing*.6);
         
         a {
             text-decoration: none;
