--- a/libs/modules/status.less
+++ b/libs/modules/status.less
@@ -6,7 +6,7 @@
  */
 
 .status {
-    padding: @box-spacing*1.5 @box-spacing @box-spacing*.5 @box-spacing;
+    .spacing(padding,@box-spacing*1.5,@box-spacing,@box-spacing*.5,@box-spacing);
     background-color: @yellow-light;
     color: @gray-1;
     vertical-align: middle;
@@ -19,7 +19,8 @@
     color: @gray-1;
     display: inline-block;
     float: left;
-    padding: @box-spacing*.5;
+    .spacing(padding,@box-spacing*.5);
+    margin-right: unit(@box-spacing*.5,em);
     margin-right: @box-spacing*.5;
 }
 @media (max-width: 767px) {
