--- a/libs/modules/tablesort.less
+++ b/libs/modules/tablesort.less
@@ -48,7 +48,7 @@
     width: 100%;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    padding: @box-spacing*.1;
+    .spacing(padding,@box-spacing*.1);
 }
 input.tablesort-filter {
     background-image: url(/Static/images/icon-search.png);
