--- a/libs/modules/title.less
+++ b/libs/modules/title.less
@@ -9,7 +9,7 @@
 .title__brand {
     // The brand image is floated right of the title
     float: right;
-    margin: 0 @box-spacing-horizontal;
+    .spacing(margin,0,@box-spacing-horizontal);
     .mixin-fit-content;
 }
 
@@ -36,6 +36,7 @@
         img {
             // Float the image
             float: left;
+            margin-right: unit(@box-spacing-horizontal,em);
             margin-right: @box-spacing-horizontal;
         }
     }
@@ -43,5 +44,6 @@
 
 // Give enough width to edit the title in edit mode
 .edit-mode .title__title {
+    min-width: unit(@box-spacing-horizontal*5,em);
     min-width: @box-spacing-horizontal*5;
 }
